// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ai.floedb.floecat.system;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.system.rpc";
option java_outer_classname = "SystemScanProto";

import "common/common.proto";       
import "common/predicate.proto";    
import "query/schema.proto";       

/**
 * SYSTEM TABLE SCAN SERVICE
 * -------------------------
 * Produces row-level results for system-backed tables
 * (pg_catalog, information_schema, engine catalogs).
 *
 * Guarantees:
 *   - Predicate evaluation is exact
 *   - All returned rows satisfy predicates
 */
message ScanSystemTableRequest {
  string query_id = 1;

  // The system table being scanned (e.g. pg_catalog.pg_attribute)
  ai.floedb.floecat.common.ResourceId table_id = 2;

  // Optional column projection.
  repeated string required_columns = 3;

  // Logical predicates applied at row level.
  repeated ai.floedb.floecat.common.Predicate predicates = 4;

  // Preferred output format for system table scans.
  OutputFormat output_format = 5;
}

enum OutputFormat {
  OUTPUT_FORMAT_UNSPECIFIED = 0;
  ROWS = 1;
  ARROW_IPC = 2;
}

/**
 * One row of a system table.
 *
 * Values are positional and match the declared schema.
 */
message SystemTableRow {
  repeated string values = 1;
}

message ScanSystemTableChunk {
  oneof payload {
    bytes arrow_schema_ipc = 1;
    bytes arrow_batch_ipc = 2;
    SystemTableRow row = 3;
  }
}

service QuerySystemScanService {
  rpc ScanSystemTable(ScanSystemTableRequest)
      returns (stream ScanSystemTableChunk);
}
