syntax = "proto3";

package ai.floedb.floecat.system;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.system.rpc";
option java_outer_classname = "SystemScanProto";

import "common/common.proto";       
import "common/predicate.proto";    
import "query/schema.proto";       

/**
 * SYSTEM TABLE SCAN SERVICE
 * -------------------------
 * Produces row-level results for system-backed tables
 * (pg_catalog, information_schema, engine catalogs).
 *
 * Guarantees:
 *   - Predicate evaluation is exact
 *   - All returned rows satisfy predicates
 */
message ScanSystemTableRequest {
  string query_id = 1;

  // The system table being scanned (e.g. pg_catalog.pg_attribute)
  ai.floedb.floecat.common.ResourceId table_id = 2;

  // Optional column projection.
  repeated string required_columns = 3;

  // Logical predicates applied at row level.
  repeated ai.floedb.floecat.common.Predicate predicates = 4;
}

/**
 * One row of a system table.
 *
 * Values are positional and match the declared schema.
 */
message SystemTableRow {
  repeated string values = 1;
}

message ScanSystemTableResponse {
  repeated SystemTableRow rows = 1;
}

service QuerySystemScanService {
  rpc ScanSystemTable(ScanSystemTableRequest)
      returns (ScanSystemTableResponse);
}